--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
 </head>
 <body>
 <script src="js/dist/deps.min.js"></script>
+<script src="js/vendor/jquery-mockjax/jquery.mockjax.js"></script>
+<script>
+  var fake = [{firstName: "grunt", lastName: "cli"}, {firstName: "ember", lastName: "js"}];
+  var accounts = [{name: "first"}, {name: "last"}];
+
+  $.mockjaxSettings.logging = false;
+  $.mockjaxSettings.responseTime = 0;
+
+  $.mockjax({
+    url: '/api/people',
+    dataType: 'json',
+    responseText: fake
+  });
+
+  $.mockjax({
+    url: '/api/accounts',
+    dataType: 'json',
+    responseText: accounts
+  });
+</script>
 <script>window.App = require('js/app')["default"].create();</script>
 </body>
 </html>
